--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "uikit": "^3.7.2",
+        "vue-axios": "^3.2.5",
         "vue-router": "^3.5.2"
     }
 }
