--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "moment": "^2.29.1",
         "uikit": "^3.7.2",
         "vue-axios": "^3.2.5",
         "vue-router": "^3.5.2"
