--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,50 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+
+
+# Created by https://www.toptal.com/developers/gitignore/api/vue,vuejs,laravel
+# Edit at https://www.toptal.com/developers/gitignore?templates=vue,vuejs,laravel
+
+### Laravel ###
+/vendor/
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Laravel 4 specific
+bootstrap/compiled.php
+app/storage/
+
+# Laravel 5 & Lumen specific
+public/storage
+public/hot
+
+# Laravel 5 & Lumen specific with changed public path
+public_html/storage
+public_html/hot
+
+storage/*.key
+.env
+Homestead.yaml
+Homestead.json
+/.vagrant
+.phpunit.result.cache
+
+### Vue ###
+# gitignore template for Vue.js projects
+#
+# Recommended template: Node.gitignore
+
+# TODO: where does this rule come from?
+docs/_book
+
+# TODO: where does this rule come from?
+test/
+
+### Vuejs ###
+# Recommended template: Node.gitignore
+
+dist/
+
+# End of https://www.toptal.com/developers/gitignore/api/vue,vuejs,laravel
